tehtävä on valmis

--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
 
      let student ={
       Name: 'Emily',
+      details:{ 
       age: 22,
       course: 'javascript'
+      }
 
      };
-     console.log(student);
+     console.log(`course: ${student.details.course}`);
 
      // Tehtävä 5: Ominaisuuksien poistaminen
     /*
